Design patterns catalog, DI example, and README (#6)
* Add Dependency Injection example for Java 27

Use constructor injection in OrderService, a composition root with
LazyConstant-backed shared beans, and tests with injected fakes.

Co-authored-by: Hicckapps <rajapandian84@gmail.com>

* Document patterns, build setup, and Cloud Agent environment in README

Co-authored-by: Hicckapps <rajapandian84@gmail.com>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>